--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 4.7.2
+        dotnet-version: 5.0.x
 
     - name: Restore Dependencies
       run: dotnet restore src/ConsoleApp1.sln
