--- a/.github/workflows/docs-only-build.yml
+++ b/.github/workflows/docs-only-build.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Build Documentation
       uses: nikeee/docfx-action@v1.0.0
       with:
-        args: docs/CSharpCodeDocs/docfx.json
+        args: docfx_project/docfx.json
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
