--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -57,6 +57,17 @@ jobs:
           coverage.cobertura.xml
           code-coverage-results.md
           
+    - name: add the code coverage results to main page.
+      run: |
+        git add code-coverage-results.md
+        git commit -m 'updating coverage'
+    
+    - name: Push changes # push the output folder to your repo
+      uses: ad-m/github-push-action@main
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        force: true
+    
     - name: Add Coverage PR Comment
       uses: marocchino/sticky-pull-request-comment@v2
       if: github.event_name == 'pull_request'
