--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -58,7 +58,10 @@ jobs:
           code-coverage-results.md
           
     - name: add the code coverage results to main page.
+      with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        GIT_AUTHOR_EMAIL="you@email.com" && GIT_AUTHOR_NAME="Your Name"
         git add code-coverage-results.md
         git commit -m 'updating coverage'
     
