--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -58,10 +58,9 @@ jobs:
           code-coverage-results.md
           
     - name: add the code coverage results to main page.
-      with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        GIT_AUTHOR_EMAIL="you@email.com" && GIT_AUTHOR_NAME="Your Name"
+        git config user.email "you@example.com"
+        git config user.name "Your Name"
         git add code-coverage-results.md
         git commit -m 'updating coverage'
     
