--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -58,11 +58,13 @@ jobs:
           code-coverage-results.md
           
     - name: add the code coverage results to main page.
+      if: github.actor != "System"
       run: |
         git config user.email "you@example.com"
-        git config user.name "Your Name"
+        git config user.name "System"
         git add code-coverage-results.md
         git commit -m 'updating coverage'
+        git push
     
     - name: Add Coverage PR Comment
       uses: marocchino/sticky-pull-request-comment@v2
