--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -8,7 +8,7 @@ on:
     branches: [ main ]
   workflow_dispatch:
 permissions:
-  contents: read  
+  contents: write  
   pull-requests: write
 
 env:
