--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
+      
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
@@ -56,7 +56,15 @@ jobs:
         path: |
           coverage.cobertura.xml
           code-coverage-results.md
-          
+    
+    - name: setup python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8 #install the python needed
+    - name: execute py script # run the run.py to get the latest data
+      run: |
+        python .github/workflows/Update-Code-Coverage.py readme.md code-coverage.md
+    
     - name: add the code coverage results to main page.
       if: github.event.pusher.name!= 'System'
       run: |
