--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -63,7 +63,7 @@ jobs:
         python-version: 3.8 #install the python needed
     - name: execute py script # run the run.py to get the latest data
       run: |
-        python .github/workflows/update_readme.py .github/workflows/readme_template.md code-coverage-results.md README.md main ${GITHUB_REPOSITORY%/*} ${GITHUB_REPOSITORY#/*} ci-build.yml
+        python .github/workflows/update_readme.py .github/workflows/readme_template.md code-coverage-results.md README.md main ${GITHUB_REPOSITORY%/*}  ${GITHUB_REPOSITORY#*/} ci-build.yml
     
     - name: add the code coverage results to main page.
       if: github.event.pusher.name!= 'System'
