--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -40,6 +40,25 @@ jobs:
 
     - name: Copy Coverage To Predictable Location
       run: cp coverage/**/coverage.cobertura.xml coverage.cobertura.xml
+      
+    - name: ReportGenerator
+      uses: danielpalme/ReportGenerator-GitHub-Action@5.1.9
+      with:
+        reports: 'coverage.cobertura.xml' # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
+        targetdir: 'coverage' # REQUIRED # The directory where the generated report should be saved.
+        reporttypes: 'MHtml;MarkdownSummary;Badges;Html' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, Html_Dark, Html_Light, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlInline_AzurePipelines_Light, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
+        sourcedirs: '' # Optional directories which contain the corresponding source code (separated by semicolon). The source directories are used if coverage report contains classes without path information.
+        historydir: '' # Optional directory for storing persistent coverage information. Can be used in future reports to show coverage evolution.
+        plugins: '' # Optional plugin files for custom reports or custom history storage (separated by semicolon).
+        assemblyfilters: '+*' # Optional list of assemblies that should be included or excluded in the report. Exclusion filters take precedence over inclusion filters. Wildcards are allowed.
+        classfilters: '+*' # Optional list of classes that should be included or excluded in the report. Exclusion filters take precedence over inclusion filters. Wildcards are allowed.
+        filefilters: '+*' # Optional list of files that should be included or excluded in the report. Exclusion filters take precedence over inclusion filters. Wildcards are allowed.
+        verbosity: 'Info' # The verbosity level of the log messages. Values: Verbose, Info, Warning, Error, Off
+        title: 'Code Coverage Report' # Optional title.
+        tag: '${{ github.run_number }}_${{ github.run_id }}' # Optional tag or build version.
+        license: '' # Optional license for PRO version. Get your license here: https://reportgenerator.io/pro
+        customSettings: '' # Optional custom settings (separated by semicolon). See: https://github.com/danielpalme/ReportGenerator/wiki/Settings.
+        toolpath: 'reportgeneratortool' # Default directory for installing the dotnet tool.
 
     - name: Coverage Summary Report
       uses:  irongut/CodeCoverageSummary@v1.2.0
@@ -48,6 +67,8 @@ jobs:
         badge: true
         format: 'md'
         output: 'both'
+        
+    
 
     - name: Upload Coverage Artifact
       uses: actions/upload-artifact@v2.3.0
@@ -56,7 +77,8 @@ jobs:
         path: |
           coverage.cobertura.xml
           code-coverage-results.md
-    
+          coverage
+     
     - name: setup python
       uses: actions/setup-python@v2
       with:
@@ -72,6 +94,9 @@ jobs:
         git config user.name "System"
         git add README.md
         git add code-coverage-results.md
+        git add coverage/badge_branchcoverage.png
+        git add coverage/badge_linecoverage.png
+        git add coverage/badge_methodcoverage.png
         git commit -m 'updating coverage'
         git push
     
