--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -40,7 +40,10 @@ jobs:
 
     - name: Copy Coverage To Predictable Location
       run: cp coverage/**/coverage.cobertura.xml coverage.cobertura.xml
-      
+    
+    - name: Copy Coverage To coverage location
+      run: cp coverage.cobertura.xml coverage/coverage.cobertura.xml
+    
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@5.1.9
       with:
