--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -100,6 +100,9 @@ jobs:
         java-version: 1.11
     
     - name: Sonarqube Analysis
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: | 
         dotnet tool install --global dotnet-sonarscanner
         dotnet tool install --global dotnet-coverage
